# Engine

./: .gitignore  CMakeLists.txt  config.ini  main.cpp
shaders/: default.frag  default.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.hpp  SceneObject.cpp  SceneObject.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp  WindowSettings.cpp  WindowSettings.hpp
src/renderer/: Camera.cpp  Camera.hpp  DrawCommand.hpp  Light.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/resources/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/ui/: EditorUI.cpp  EditorUI.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
src/utils/: File.cpp  File.hpp  Math.hpp
src/vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Memory.cpp  Memory.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Swapchain.cpp  Swapchain.hpp  Sync.cpp  Sync.hpp
